made backgroundColor and createFigure

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,7 @@
 
 <body>
 
-    <ul class="menu" id="menu">
-        <li class="menu-item">sdaf</li>
-        <li class="menu-item">sdaf</li>
-    </ul>
+    <ul class="menu" id="menu"></ul>
 
 </body>
 
